--- a/main.css
+++ b/main.css
@@ -29,6 +29,60 @@ body {
 }
 
 .password-box input {
-    
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    padding: 0 45px 0 15px;
+    border: 1px solid  #aaa;
+    background-color: transparent;
+}
 
+.password-box .copy-icon {
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    color: #707070;
+    font-size: 20px;
+    cursor: pointer;
+    transform: translateY(10%);
+}
+
+.copy-icon:hover {
+    color: #826afb;
+}
+
+.wrapper .range-box {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.range-box input {
+    width: 100%;
+    height: 5px;
+    accent-color:#826afb;
+    cursor: pointer;
+}
+
+.range-box .slider-number {
+    min-width: 30px;
+    text-align: right;
+    font-size: 17px;
+    color: #707070;
+}
+
+.wrapper .generate-button {
+    width: 100%;
+    color: #fff;
+    padding: 12px 0;
+    margin-top: 20px;
+    background: #927dfc;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+} 
+
+.generate-button:hover {
+    background-color: #826afb;
 }
